// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModelFilterLabel should override label with prop 1`] = `
<DocumentFragment>
  <label
    class="form-label"
    for="dummy"
    id="filterLabel-dummy"
    label="Dummy Override"
    path="dummy"
  >
    Dummy Override
  </label>
</DocumentFragment>
`;

exports[`ModelFilterLabel should render label with readable name 1`] = `
<DocumentFragment>
  <label
    class="form-label"
    for="dummy"
    id="filterLabel-dummy"
    label="Dummy "
    path="dummy"
  >
    Dummy 
  </label>
</DocumentFragment>
`;
